<resources>
    <string name="app_name" translatable="false">Interfungi</string>
    <string name="app_claim" translatable="false">Red de observadores intergeneracionales del reino fungi</string>
    <string name="app_authors" translatable="false">Ibercivis - CITA</string>
    <string name="navigation_open_drawer" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_close_drawer" translatable="false">Close Navigation Drawer</string>
    <string name="base_url" translatable="false">https://interfungi.ibercivis.es</string>
    <string name="popup_wait" translatable="false">Por favor, espere...</string>
    <string name="card1" translatable="false">Esta seta ha sido vista</string>
    <string name="card2" translatable="false"> veces</string>
    <string name="card3" translatable="false">Me Gusta</string>
    <string name="card4" translatable="false">Participar</string>
    <string name="login1" translatable="false">Bienvenido</string>
    <string name="login2" translatable="false">Accede con tu usuario</string>
    <string name="login3" translatable="false">Username</string>
    <string name="login4" translatable="false">Password</string>
    <string name="login5" translatable="false">¿Olvidaste tu contraseña?</string>
    <string name="login6" translatable="false">Entrar</string>
    <string name="login7" translatable="false">¿Nuevo usuario? Regístrate</string>
    <string name="sign1" translatable="false">Bienvenido</string>
    <string name="sign2" translatable="false">Regístrate para comenzar a mapear</string>
    <string name="sign3" translatable="false">Username</string>
    <string name="sign4" translatable="false">E-mail</string>
    <string name="sign5" translatable="false">Contraseña</string>
    <string name="sign6" translatable="false">Repetir contraseña</string>
    <string name="sign7" translatable="false">Crear usuario</string>
    <string name="sign8" translatable="false">¿Ya estás registrado? Accede</string>
    <string name="main1" translatable="false">Catálogo</string>
    <string name="main2" translatable="false">Crear observación</string>
    <string name="main3">Mis observaciones</string>
    <string name="main4">¿Qué es Interfungi?</string>
    <string name="mainmenu1">Home</string>
    <string name="mainmenu2">Catálogo</string>
    <string name="mainmenu3">Añadir observación</string>
    <string name="mainmenu4">Usuario</string>
    <string name="mainmenu5">Mis observaciones</string>
    <string name="mainmenu6">Log out</string>
    <string name="cardmenu1">Descargar todos los marcadores</string>
    <string name="cardmenu2">Editar marcador</string>
    <string name="cardmenu3">Borrar marcador</string>
    <string name="searcher">Buscador</string>
    <string name="marker1">NUEVO MARCADOR</string>
    <string name="marker2">Añadir foto</string>
    <string name="btncancel">Cancelar</string>
    <string name="btnaccept">Añadir marcador</string>
    <string name="volver">Volver</string>
    <string name="noInfo">El administrador del proyecto no ha añadido una descripción para este atributo.</string>
    <string name="delete1">¿Estás seguro de que deseas eliminar este proyecto?</string>
    <string name="delete2">Está acción borrará todos los marcadores asociados de manera irreversible. Te recomendamos que descargues los marcadores de este proyecto antes de eliminarlo definitivamente.</string>
    <string name="delete3">Eliminar proyecto</string>
    <string name="crear_observacion_titulo">Crear observación</string>
    <string name="crear1">Datos del proyecto</string>
    <string name="crear2">Descripción de la observación</string>
    <string name="crear3">Descripción</string>
    <string name="crear4" translatable="false">Sitio web</string>
    <string name="crear5" translatable="false">Imagen sin cortar</string>
    <string name="crear6" translatable="false">Resolución recomendada 200x200</string>
    <string name="crear7">Marcadores</string>
    <string name="crear8">Incluye foto"    "</string>
    <string name="crear9">Añade los atributos que necesites (max. 23)</string>
    <string name="crear10">Privado"    "</string>
    <string name="crear11">Añadir atributo texto</string>
    <string name="crear12">Añadir atributo número</string>
    <string name="crear13">Atributo 1 (Respuesta texto)</string>
    <string name="crear14">Descripción del atributo 1 (Opcional)</string>
    <string name="crear15">Atributo 2 (Respuesta texto)</string>
    <string name="crear16">Descripción del atributo 2 (Opcional)</string>
    <string name="crear17">Atributo 3 (Respuesta texto)</string>
    <string name="crear18">Descripción del atributo 3 (Opcional)</string>
    <string name="crear19">Atributo 4 (Respuesta texto)</string>
    <string name="crear20">Descripción del atributo 4 (Opcional)</string>
    <string name="crear21">Atributo 5 (Respuesta texto)</string>
    <string name="crear22">Descripción del atributo 5 (Opcional)</string>
    <string name="crear23">Atributo 6 (Respuesta texto)</string>
    <string name="crear24">Descripción del atributo 6 (Opcional)</string>
    <string name="crear25">Atributo 7 (Respuesta texto)</string>
    <string name="crear26">Descripción del atributo 7 (Opcional)</string>
    <string name="crear27">Atributo 8 (Respuesta texto)</string>
    <string name="crear28">Descripción del atributo 8 (Opcional)</string>
    <string name="crear29">Atributo 9 (Respuesta texto)</string>
    <string name="crear30">Descripción del atributo 9 (Opcional)</string>
    <string name="crear31">Atributo 10 (Respuesta texto)</string>
    <string name="crear32">Descripción del atributo 10 (Opcional)</string>
    <string name="crear33">Atributo 11 (Respuesta texto)</string>
    <string name="crear34">Descripción del atributo 11 (Opcional)</string>
    <string name="crear35">Atributo 12 (Respuesta texto)</string>
    <string name="crear36">Descripción del atributo 12 (Opcional)</string>
    <string name="crear37">Atributo 13 (Respuesta texto)</string>
    <string name="crear38">Descripción del atributo 13 (Opcional)</string>
    <string name="crear39">Atributo 14 (Respuesta texto)</string>
    <string name="crear40">Descripción del atributo 14 (Opcional)</string>
    <string name="crear41">Atributo 15 (Respuesta texto)</string>
    <string name="crear42">Descripción del atributo 15 (Opcional)</string>
    <string name="crear43">Atributo 16 (Respuesta texto)</string>
    <string name="crear44">Descripción del atributo 16 (Opcional)</string>
    <string name="crear45">Crear proyecto</string>
    <string name="crear46">Atributo 1 (Respuesta número)</string>
    <string name="crear47">Atributo 2 (Respuesta número)</string>
    <string name="crear48">Atributo 3 (Respuesta número)</string>
    <string name="crear49">Atributo 4 (Respuesta número)</string>
    <string name="crear50">Atributo 5 (Respuesta número)</string>
    <string name="crear51">Atributo 6 (Respuesta número)</string>
    <string name="crear52">Atributo 7 (Respuesta número)</string>
    <string name="crear53">Atributo 8 (Respuesta número)</string>
    <string name="crear54">Atributo 9 (Respuesta número)</string>
    <string name="crear55">Atributo 10 (Respuesta número)</string>
    <string name="crear56">Atributo 11 (Respuesta número)</string>
    <string name="crear57">Atributo 12 (Respuesta número)</string>
    <string name="crear58">Atributo 13 (Respuesta número)</string>
    <string name="crear59">Atributo 14 (Respuesta número)</string>
    <string name="crear60">Atributo 15 (Respuesta número)</string>
    <string name="crear61">Atributo 16 (Respuesta número)</string>
    <string name="crear62">Has alcanzado el límite de atributos</string>
    <string name="crear63">Proyecto añadido correctamente</string>
    <string name="crear64">Se debe añadir al menos un atributo al marcador del proyecto.</string>
    <string name="crear65">Atributo 17 (Respuesta texto)</string>
    <string name="crear66">Descripción del atributo 17 (Opcional)</string>
    <string name="crear67">Atributo 18 (Respuesta texto)</string>
    <string name="crear68">Descripción del atributo 18 (Opcional)</string>
    <string name="crear69">Atributo 19 (Respuesta texto)</string>
    <string name="crear70">Descripción del atributo 19 (Opcional)</string>
    <string name="crear71">Atributo 20 (Respuesta texto)</string>
    <string name="crear72">Descripción del atributo 20 (Opcional)</string>
    <string name="crear73">Atributo 21 (Respuesta texto)</string>
    <string name="crear74">Descripción del atributo 21 (Opcional)</string>
    <string name="crear75">Atributo 22 (Respuesta texto)</string>
    <string name="crear76">Descripción del atributo 22 (Opcional)</string>
    <string name="crear77">Atributo 23 (Respuesta texto)</string>
    <string name="crear78">Descripción del atributo 23 (Opcional)</string>
    <string name="crear79">Atributo 17 (Respuesta número)</string>
    <string name="crear80">Atributo 18 (Respuesta número)</string>
    <string name="crear81">Atributo 19 (Respuesta número)</string>
    <string name="crear82">Atributo 20 (Respuesta número)</string>
    <string name="crear83">Atributo 21 (Respuesta número)</string>
    <string name="crear84">Atributo 22 (Respuesta número)</string>
    <string name="crear85">Atributo 23 (Respuesta número)</string>
    <string name="descargar1">Escribe la dirección de correo electrónico en la que quieres recibir los datos de los marcadores de este proyecto. Los datos se enviarán en formato .CSV</string>
    <string name="descargar2">Aceptar</string>
    <string name="editar1">Editar proyecto</string>
    <string name="editar2">Proyecto editado correctamente</string>
    <string name="privado">Este es un proyecto privado y requiere de contraseña para participar.</string>
    <string name="user1">Mis observaciones:</string>
    <string name="user2">Todavía no has creado ningún proyecto.</string>
    <string name="user3">Mis Observaciones:</string>
    <string name="user4">Todavía no has dado Me Gusta a ningún proyecto. Recuerda dar Me Gusta a los proyectos en los que participas para que aparezcan aquí.</string>
    <string name="mapa">Mantén pulsado sobre el mapa en la posición en la que quieras añadir un Marcador</string>
    <string name="mapa1">Cancelar</string>
    <string name="mapa2">Añadir Observación</string>
    <string name="mapa3">Aceptar</string>
    <string name="mapa4">Editar Marcador</string>
    <string name="mapa5">Editar</string>
    <string name="quienes">Aragón es una de las comunidades de Europa dónde la recolección de setas está más arraigada entre su sociedad. De esa afición surge Interfungi, un proyecto de ciencia ciudadana con los siguientes objetivos:

- Preservar los conocimientos micológicos y transmitirlos a las generaciones más jóvenes. Es decir, conseguir que todo lo que saben los mayores no se pierda

- Conseguir datos (a través de observaciones) que ayudará a los investigadores a determinar el estado y calidad de las zonas de producción. Por ejemplo, creando mapas de presión recolectora.

- Acercar el potencial de las zonas rurales a aquellos que no están familiarizados con esos conocimientos.

Todos los avances de #Interfungi se publicarán en nuestra newsletter. ¡Subscríbete aquí! - aquí tendrá que ir un link a la web para que la gente se suscriba.-

¿Quieres ser uno de nuestros observadores?
¡Con tu participación estás ayudando a conocer y proteger las setas de Aragón!

Interfungi surge del trabajo conjunto de la Fundación Ibercivis y del Centro de Investigación y Tecnología Agroalimentaria de Aragón (CITA). El proyecto ha sido financiado gracias a FECYT, Fundación Española de Ciencia y Tecnología - Ministerio de Ciencia e Innovación. </string>
    <string name="seta_sincortar">Seta sin recolectar</string>
    <string name="seta_cortada">Seta recolectada</string>
    <string name="selecciona_seta">¿Qué especie has identificado?</string>
    <string name="interfungi_website">Ir al sitio web</string>
</resources>