<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibercivis.interfungi.SignUp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/interfungi_marron"
        android:transitionName="logo_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/sign1"
            android:textColor="@color/primaryColor"
            android:textSize="40sp"
            android:transitionName="logo_text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/sign2"
        android:textSize="18sp"
        android:layout_marginTop="-20dp"
        android:transitionName="logo_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/sign3"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:transitionName="username_tran">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign4"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign5"
            app:passwordToggleEnabled="true"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign6"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

        <Button
            android:id="@+id/entrar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/primaryLightColor"
            android:text="@string/sign7"
            android:textColor="#fff"
            android:transitionName="btn1_tran" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:fontFamily="@font/antic"
        android:text="@string/sign8"
        android:transitionName="btn2_tran"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/proteccion_datos"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:background="#A4363030"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/marcobotonsolido"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="PROTECCIÓN DE DATOS"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkdatos1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Para el disfrute de nuestra app, usted acepta nuestra Política de
Privacidad"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkdatos2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="AUTORIZO (como mayor de edad o como responsable legal de un menor de 14 años) a la toma de
imágenes fotográficas con la única finalidad de archivo y difusión."
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/primaryColor"
                    android:paddingHorizontal="12dp"
                    android:text="volver"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/acept_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/primaryLightColor"
                    android:paddingHorizontal="12dp"
                    android:text="acepto"
                    android:textColor="#fff" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cargando"
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:background="#A4363030"
        android:gravity="center"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/marcobotonsolido">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_wait"
                android:fontFamily="sans-serif-condensed"/>

            <ProgressBar
                android:layout_marginTop="8dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>