<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibercivis.interfungiapp.CrearProyecto"
    android:id="@+id/drawer_layout3"
    android:fitsSystemWindows="true"
    tools:openDrawer="star">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view3"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar3"
                layout="@layout/toolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/crear_observacion_titulo"
                            android:textAllCaps="true"
                            android:textColor="@color/primaryColor"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="vertical">


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/edit_titulo"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/crear2">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/project_titulo"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textCapWords|textAutoCorrect"
                                    android:maxLines="1" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/edit_descripcion"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/crear3"
                                app:counterEnabled="true"
                                app:counterMaxLength="240" />


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/edit_web"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/crear4" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <Button
                                        android:id="@+id/upload_logo"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginTop="16dp"
                                        android:background="@color/secondaryColor"
                                        android:paddingHorizontal="20dp"
                                        android:text="@string/crear5"
                                        android:textColor="@color/secondaryTextColor" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="2dp"
                                        android:text="@string/crear6"
                                        android:textSize="9dp" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center">

                                    <ImageView
                                        android:id="@+id/miniatura_logo"
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        android:paddingHorizontal="20dp"
                                        android:scaleType="centerCrop"
                                        android:src="@drawable/miniatura_insertar_logo"
                                        android:text="Subir Logo"
                                        android:textColor="#fff" />

                                </LinearLayout>

                            </LinearLayout>


                        </LinearLayout>


                        <Switch
                            android:id="@+id/switchprivado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/antic"
                            android:text="@string/crear10"

                            android:textColor="@color/primaryColor" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/edit_privado"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:hint="Contraseña"
                            android:maxLength="16"
                            android:visibility="gone"
                            app:counterEnabled="true"
                            app:counterMaxLength="16">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/project_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_crearproyecto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/primaryColor"
                        android:onClick="addprojectRequest"
                        android:text="@string/crear_observacion_titulo"
                        android:textColor="@color/primaryTextColor" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cargando"
            android:layout_width="match_parent"
            android:layout_height="770dp"
            android:background="#A4363030"
            android:gravity="center"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/marcobotonsolido">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Por favor, espere..."
                    android:fontFamily="sans-serif-condensed"/>

                <ProgressBar
                    android:layout_marginTop="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>